// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Component > props.align > props.align is equal to center 1`] = `
<div
  class="t-input t-align-center"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.align > props.align is equal to left 1`] = `
<div
  class="t-input"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.align > props.align is equal to right 1`] = `
<div
  class="t-input t-align-right"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.label > props.label works fine with TNode 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--prefix"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input Component > props.label > slots.label works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--prefix"
  >
    <!---->
    <div
      class="t-input__prefix"
    >
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </div>
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input Component > props.status > props.status is equal to default 1`] = `
<div
  class="t-input"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.status > props.status is equal to error 1`] = `
<div
  class="t-input t-is-error"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.status > props.status is equal to success 1`] = `
<div
  class="t-input t-is-success"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.status > props.status is equal to warning 1`] = `
<div
  class="t-input t-is-warning"
>
  <!---->
  <!---->
  <input
    class="t-input__inner"
    placeholder="请输入"
    spellcheck="false"
    type="text"
    unselectable="off"
  />
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Input Component > props.suffix > props.suffix works fine with TNode 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <!---->
    <!---->
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <div
      class="t-input__suffix"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input Component > props.suffix > slots.suffix works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <!---->
    <!---->
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <div
      class="t-input__suffix"
    >
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
      <!---->
    </div>
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`Input Component > props.suffixIcon > props.suffixIcon works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <!---->
    <!---->
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <!---->
    <!---->
    <span
      class="t-input__suffix t-input__suffix-icon"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </div>
  <!---->
</div>
`;

exports[`Input Component > props.suffixIcon > slots.suffix-icon works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <!---->
    <!---->
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <!---->
    <!---->
    <span
      class="t-input__suffix t-input__suffix-icon"
    >
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </span>
  </div>
  <!---->
</div>
`;

exports[`Input Component > props.suffixIcon > slots.suffixIcon works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <!---->
    <!---->
    <input
      class="t-input__inner"
      placeholder="请输入"
      spellcheck="false"
      type="text"
      unselectable="off"
    />
    <!---->
    <!---->
    <!---->
    <span
      class="t-input__suffix t-input__suffix-icon"
    >
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </span>
  </div>
  <!---->
</div>
`;
